# Responsive-Landing-page

./: README.md  pyproject.toml
static/: script.js  style.css
templates/: home.html
